--- a/cute_ass_hell/Assembly-CSharp.csproj
+++ b/cute_ass_hell/Assembly-CSharp.csproj
@@ -65,6 +65,8 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Assets\script\GameManager.cs" />
+    <Compile Include="Assets\script\Jugador.cs" />
+    <Compile Include="Assets\script\Moviment.cs" />
     <Reference Include="UnityEngine">
       <HintPath>C:/Program Files/Unity/Hub/Editor/2019.4.15f1/Editor/Data/Managed/UnityEngine/UnityEngine.dll</HintPath>
     </Reference>
