--- a/cute_ass_hell/Assembly-CSharp.csproj
+++ b/cute_ass_hell/Assembly-CSharp.csproj
@@ -64,6 +64,7 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Assets\script\Enemic.cs" />
     <Compile Include="Assets\script\GameManager.cs" />
     <Compile Include="Assets\script\Jugador.cs" />
     <Compile Include="Assets\script\Moviment.cs" />
