--- a/cute_ass_hell/Assembly-CSharp.csproj
+++ b/cute_ass_hell/Assembly-CSharp.csproj
@@ -37,6 +37,7 @@
   </PropertyGroup>
   <ItemGroup>
      <Compile Include="Assets\script\Enemics\Enemic.cs" />
+     <Compile Include="Assets\script\Enemics\SpawnerEnemic.cs" />
      <Compile Include="Assets\script\GameManager.cs" />
      <Compile Include="Assets\script\Jugador.cs" />
      <Compile Include="Assets\script\Pared.cs" />
