--- a/cute_ass_hell/Assembly-CSharp.csproj
+++ b/cute_ass_hell/Assembly-CSharp.csproj
@@ -79,6 +79,7 @@
     <Compile Include="Assets\script\Proyectil.cs" />
     <Compile Include="Assets\script\SeguimetnCamara.cs" />
     <Compile Include="Assets\script\SpawnerProyectil.cs" />
+    <Compile Include="Assets\script\Sprite.cs" />
     <Reference Include="UnityEngine">
       <HintPath>C:/Program Files/Unity/Hub/Editor/2019.4.15f1/Editor/Data/Managed/UnityEngine/UnityEngine.dll</HintPath>
     </Reference>
