--- a/cute_ass_hell/Assembly-CSharp.csproj
+++ b/cute_ass_hell/Assembly-CSharp.csproj
@@ -77,6 +77,7 @@
     <Compile Include="Assets\script\Pared.cs" />
     <Compile Include="Assets\script\PathFinding.cs" />
     <Compile Include="Assets\script\Proyectil.cs" />
+    <Compile Include="Assets\script\ScoreText.cs" />
     <Compile Include="Assets\script\SeguimetnCamara.cs" />
     <Compile Include="Assets\script\SpawnerProyectil.cs" />
     <Reference Include="UnityEngine">
